--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.10.0",
     "nodemon": "^2.0.20",
     "swagger-ui-express": "^4.5.0"
